--- a/src/app/(components)/post-card/post-card.module.css
+++ b/src/app/(components)/post-card/post-card.module.css
@@ -11,6 +11,7 @@
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
+  line-clamp: 3;
   -webkit-line-clamp: 3;
 }
 
@@ -28,5 +29,5 @@
   /* レイアウト */
   @apply flex justify-center items-center gap-x-3;
   /* 余白 */
-  @apply pr-4 pt-2;
+  @apply pr-4 pt-3;
 }
