--- a/src/app/(components)/post-button/post-button.module.css
+++ b/src/app/(components)/post-button/post-button.module.css
@@ -1,3 +1,8 @@
 .button {
-  @apply border-primary border-2 rounded-full w-14 h-14 bg-black fixed top-0;
+  /* base */
+  @apply border-primary border-2 rounded-full w-14 h-14 bg-black;
+  /* position */
+  @apply fixed;
+  /* other */
+  @apply z-10;
 }
