--- a/src/components/ui/modal/index.module.css
+++ b/src/components/ui/modal/index.module.css
@@ -8,4 +8,8 @@
 .wrapper {
   /* 見た目 */
   @apply bg-black border-primary border w-1/2;
+  /* 余白 */
+  @apply px-8 py-8;
+  /* その他 */
+  @apply relative;
 }
