--- a/src/components/ui/modal/index.module.css
+++ b/src/components/ui/modal/index.module.css
@@ -6,11 +6,11 @@
 
 .content {
   /* 見た目 */
-  @apply bg-black border-primary border w-1/2 text-white;
+  @apply bg-black border-primary border w-5/12 text-white rounded-lg;
   /* 余白 */
   @apply px-8 py-8;
   /* その他 */
-  @apply relative;
+  @apply relative max-h-screen overflow-scroll;
 }
 
 .close-button {
