モーダルの外がスクロールされないよう修正

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,10 @@ dialog::backdrop {
   @apply bg-black/30;
 }
 
+body:has(dialog[open]) {
+  overflow: hidden;
+}
+
 input, textarea {
   @apply bg-black;
 }
