モーダルを作成

--- a/src/components/ui/modal/index.module.css
+++ b/src/components/ui/modal/index.module.css
@@ -10,7 +10,7 @@
   /* 余白 */
   @apply px-8 py-8;
   /* その他 */
-  @apply relative max-h-screen overflow-scroll;
+  @apply relative max-h-[85%] overflow-scroll;
 }
 
 .close-button {
