--- a/src/app/(components)/post-card/post-card.module.css
+++ b/src/app/(components)/post-card/post-card.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   /* レイアウト */
-  @apply w-4/5 bg-black relative shadow-md;
+  @apply bg-black relative shadow-md w-full;
   /* 余白 */
   @apply px-8 pt-5 pb-5;
 }
